workloads/web-server/base/cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  type: LoadBalancer 
  selector:
    app: web-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
